modify: sprint4 기본 요구사항 구현